Ajout gitignore + fix divers

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <header class="presentation">
       <div class="logo">
         <div class="title">
-          <img src="/images_booki/logo/booki.png" alt="logo" />
+          <img src="/images_booki/logo/booki.png" alt="logo_booki" />
         </div>
       </div>
 
@@ -91,7 +91,7 @@
             width="22px"
             height="16.26px"
             src="/images_booki/composants/vectoreconomique.png"
-            alt="eco"
+            alt=""
           />
           <p>Economique</p>
         </div>
@@ -101,7 +101,7 @@
             width="13.44px"
             height="22px"
             src="/images_booki/composants/vectorfamilial.png"
-            alt="familial"
+            alt=""
           />
           <p>Familial</p>
         </div>
@@ -111,7 +111,7 @@
             width="22px"
             height="18.33px"
             src="/images_booki/composants/vectorromantique.png"
-            alt="romantique"
+            alt=""
           />
           <p>Romantique</p>
         </div>
@@ -121,7 +121,7 @@
             width="22px"
             height="22px"
             src="/images_booki/composants/vectoranimaux.png"
-            alt="animaux"
+            alt=""
           />
           <p>Animaux autorisés</p>
         </div>
@@ -154,7 +154,7 @@
                 <img
                   width="246px"
                   height="124px"
-                  alt="photo_1"
+                  alt=""
                   src="/images_booki/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
                 />
               </div>
@@ -176,7 +176,7 @@
                 <img
                   width="246px"
                   height="124px"
-                  alt="photo_2"
+                  alt=""
                   src="/images_booki/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
                 />
               </div>
@@ -197,7 +197,7 @@
                 <img
                   width="246px"
                   height="124px"
-                  alt="photo_2"
+                  alt=""
                   src="/images_booki/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
                 />
               </div>
@@ -219,7 +219,7 @@
                 <img
                   width="246px"
                   height="124px"
-                  alt="photo_2"
+                  alt=""
                   src="/images_booki/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
                 />
               </div>
@@ -241,7 +241,7 @@
                 <img
                   width="246px"
                   height="124px"
-                  alt="photo_2"
+                  alt=""
                   src="/images_booki/hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
                 />
               </div>
@@ -263,7 +263,7 @@
                 <img
                   width="246px"
                   height="124px"
-                  alt="photo_2"
+                  alt=""
                   src="/images_booki/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
                 />
               </div>
@@ -290,7 +290,7 @@
           <br />
           <img
             width="18px"
-            alt="graph"
+            alt=""
             height="15.75px"
             src="/images_booki/composants/vectorgraph.png"
           />
@@ -301,7 +301,7 @@
             <div class="matin">
               <div class="photoo">
                 <img
-                  alt="photo_1"
+                  alt=""
                   src="/images_booki/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
                 />
               </div>
@@ -322,7 +322,7 @@
             <div class="matin">
               <div class="photoo">
                 <img
-                  alt="photo_1"
+                  alt=""
                   src="/images_booki/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
                 />
               </div>
@@ -343,7 +343,7 @@
             <div class="matin">
               <div class="photoo">
                 <img
-                  alt="photo_1"
+                  alt=""
                   src="/images_booki/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
                 />
               </div>
@@ -376,7 +376,7 @@
             <div class="activity">
               <div class="image">
                 <img
-                  alt="photo_1"
+                  alt=""
                   src="/images_booki/activites/2_large/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
                 />
               </div>
@@ -393,7 +393,7 @@
             <div class="activity">
               <div class="image2">
                 <img
-                  alt="photo_1"
+                  alt=""
                   src="/images_booki/activites/2_large/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
                 />
               </div>
@@ -409,7 +409,7 @@
             <div class="activity">
               <div class="image">
                 <img
-                  alt="photo_1"
+                  alt=""
                   src="/images_booki/activites/2_large/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
                 />
               </div>
@@ -425,7 +425,7 @@
             <div class="activity">
               <div class="image">
                 <img
-                  alt="photo_1"
+                  alt=""
                   src="/images_booki/activites/2_large/florian-wehde-xW9e8gdotxI-unsplash.jpg"
                 />
               </div>
@@ -440,7 +440,7 @@
 
     <!-- FOOTER -->
 
-    <script>
+    <!-- <script>
       window.addEventListener("resize", function (event) {
         let p = "Width: " + window.innerWidth;
         let o = "Height: " + window.innerHeight;
@@ -448,7 +448,7 @@
         i.innerHTML = p + " " + o;
       });
     </script>
-    <p id="wiwi"></p>
+    <p id="wiwi"></p> -->
 
     <footer>
       <div class="bandeau">
