--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="reset.css" />
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="./reset.css" />
+    <link rel="stylesheet" type="text/css" href="./style.css" />
     <script
       src="https://kit.fontawesome.com/b36407d020.js"
       crossorigin="anonymous"
@@ -37,7 +37,7 @@
     <header class="presentation">
       <div class="logo">
         <div class="title">
-          <img src="/images_booki/logo/booki.png" alt="logo_booki" />
+          <img src="./images_booki/logo/booki.png" alt="logo_booki" />
         </div>
       </div>
 
@@ -90,7 +90,7 @@
           <img
             width="22px"
             height="16.26px"
-            src="/images_booki/composants/vectoreconomique.png"
+            src="./images_booki/composants/vectoreconomique.png"
             alt=""
           />
           <p>Economique</p>
@@ -100,7 +100,7 @@
           <img
             width="13.44px"
             height="22px"
-            src="/images_booki/composants/vectorfamilial.png"
+            src="./images_booki/composants/vectorfamilial.png"
             alt=""
           />
           <p>Familial</p>
@@ -110,7 +110,7 @@
           <img
             width="22px"
             height="18.33px"
-            src="/images_booki/composants/vectorromantique.png"
+            src="./images_booki/composants/vectorromantique.png"
             alt=""
           />
           <p>Romantique</p>
@@ -120,7 +120,7 @@
           <img
             width="22px"
             height="22px"
-            src="/images_booki/composants/vectoranimaux.png"
+            src="./images_booki/composants/vectoranimaux.png"
             alt=""
           />
           <p>Animaux autorisés</p>
@@ -132,7 +132,7 @@
       <img
         width="4px"
         height="10px"
-        src="/images_booki/composants/vectori.png"
+        src="./images_booki/composants/vectori.png"
         alt="i"
       />
 
@@ -155,7 +155,7 @@
                   width="246px"
                   height="124px"
                   alt=""
-                  src="/images_booki/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
+                  src="./images_booki/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
                 />
               </div>
               <span class="titre">Auberge La Canebière</span>
@@ -177,7 +177,7 @@
                   width="246px"
                   height="124px"
                   alt=""
-                  src="/images_booki/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
+                  src="./images_booki/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
                 />
               </div>
               <span class="titre">Hôtel du port</span>
@@ -198,7 +198,7 @@
                   width="246px"
                   height="124px"
                   alt=""
-                  src="/images_booki/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
+                  src="./images_booki/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
                 />
               </div>
               <span class="titre">Hôtel des mouettes</span>
@@ -220,7 +220,7 @@
                   width="246px"
                   height="124px"
                   alt=""
-                  src="/images_booki/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
+                  src="./images_booki/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
                 />
               </div>
               <span class="titre">Hôtel de la mer</span>
@@ -242,7 +242,7 @@
                   width="246px"
                   height="124px"
                   alt=""
-                  src="/images_booki/hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
+                  src="./images_booki/hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
                 />
               </div>
               <span class="titre">Auberge Le Panier</span>
@@ -264,7 +264,7 @@
                   width="246px"
                   height="124px"
                   alt=""
-                  src="/images_booki/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
+                  src="./images_booki/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
                 />
               </div>
               <span class="titre">Hôtel chez Amina</span>
@@ -292,7 +292,7 @@
             width="18px"
             alt=""
             height="15.75px"
-            src="/images_booki/composants/vectorgraph.png"
+            src="./images_booki/composants/vectorgraph.png"
           />
         </div>
 
@@ -302,7 +302,7 @@
               <div class="photoo">
                 <img
                   alt=""
-                  src="/images_booki/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
+                  src="./images_booki/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
                 />
               </div>
               <div class="text">
@@ -323,7 +323,7 @@
               <div class="photoo">
                 <img
                   alt=""
-                  src="/images_booki/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
+                  src="./images_booki/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
                 />
               </div>
               <div class="text">
@@ -344,7 +344,7 @@
               <div class="photoo">
                 <img
                   alt=""
-                  src="/images_booki/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
+                  src="./images_booki/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
                 />
               </div>
               <div class="text">
@@ -377,7 +377,7 @@
               <div class="image">
                 <img
                   alt=""
-                  src="/images_booki/activites/2_large/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
+                  src="./images_booki/activites/2_large/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
                 />
               </div>
 
@@ -394,7 +394,7 @@
               <div class="image2">
                 <img
                   alt=""
-                  src="/images_booki/activites/2_large/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
+                  src="./images_booki/activites/2_large/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
                 />
               </div>
               <div class="lieux">
@@ -410,7 +410,7 @@
               <div class="image">
                 <img
                   alt=""
-                  src="/images_booki/activites/2_large/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
+                  src="./images_booki/activites/2_large/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
                 />
               </div>
               <div class="lieux">
@@ -426,7 +426,7 @@
               <div class="image">
                 <img
                   alt=""
-                  src="/images_booki/activites/2_large/florian-wehde-xW9e8gdotxI-unsplash.jpg"
+                  src="./images_booki/activites/2_large/florian-wehde-xW9e8gdotxI-unsplash.jpg"
                 />
               </div>
               <div class="lieux">
