--- a/index.html
+++ b/index.html
@@ -116,12 +116,6 @@
         </div>
 
         <div class="e">
-          <!-- <img
-            width="13.44px"
-            height="22px"
-            src="./images_booki/composants/vectorfamilial.png"
-            alt=""
-          /> -->
           <svg
             width="14"
             height="22"
@@ -138,12 +132,6 @@
         </div>
 
         <div class="e">
-          <!-- <img
-            width="22px"
-            height="18.33px"
-            src="./images_booki/composants/vectorromantique.png"
-            alt=""
-          /> -->
           <svg
             width="22"
             height="19"
@@ -161,12 +149,6 @@
         </div>
 
         <div class="e">
-          <!-- <img
-            width="22px"
-            height="22px"
-            src="./images_booki/composants/vectoranimaux.png"
-            alt=""
-          /> -->
           <svg
             width="22"
             height="22"
@@ -186,12 +168,6 @@
     </section>
 
     <section class="information">
-      <!-- <img
-        width="4px"
-        height="10px"
-        src="./images_booki/composants/vectori.png"
-        alt="i"
-      /> -->
       <svg
         width="5"
         height="13"
@@ -357,12 +333,7 @@
         <div class="title_les_plus_populaires">
           <h2>Les plus populaires</h2>
           <br />
-          <!-- <img
-            width="18px"
-            alt=""
-            height="15.75px"
-            src="./images_booki/composants/vectorgraph.png"
-          /> -->
+
           <svg
             width="18"
             height="16"
@@ -521,7 +492,7 @@
 
     <!-- FOOTER -->
 
-    <!-- <script>
+    <script>
       window.addEventListener("resize", function (event) {
         let p = "Width: " + window.innerWidth;
         let o = "Height: " + window.innerHeight;
@@ -529,7 +500,7 @@
         i.innerHTML = p + " " + o;
       });
     </script>
-    <p id="wiwi"></p> -->
+    <p id="wiwi"></p>
 
     <footer>
       <div class="bandeau">
