--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
 
       <!-- FOOTER -->
 
-      <script>
+      <!-- <script>
         window.addEventListener("resize", function (event) {
           let p = "Width: " + window.innerWidth;
           let o = "Height: " + window.innerHeight;
@@ -500,7 +500,7 @@
           i.innerHTML = p + " " + o;
         });
       </script>
-      <p id="wiwi"></p>
+      <p id="wiwi"></p> -->
     </article>
 
     <footer>
